<resources>
    <string name="app_name">CapstoneProjectMD</string>
    <string name="title_home">Beranda</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_title">Selamat Datang Kembali di GymLens!</string>
    <string name="welcome_subtitle">Lanjutkan latihanmu dari mana saja dan kapan saja.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email_hint">Email</string>
    <string name="forgot_password">Lupa Kata Sandi?</string>
    <string name="login_button">Login</string>
    <string name="or">ATAU</string>
    <string name="google_login">Lanjutkan dengan Google</string>
    <string name="password_hint">Kata Sandi</string>
    <string name="full_name_hint">Nama Lengkap</string>
    <string name="title_history">Histori</string>
    <string name="title_scan">GymLens</string>
    <string name="title_chatbot">Chatbot</string>
    <string name="title_profile">Profil</string>
    <string name="register_welcome_title">Selamat Datang di GymLens!</string>
    <string name="register_title">Mulai Petualangan Fitnessmu!</string>
    <string name="register_subtitle">Identifikasi alat gym sekarang dan dapatkan rekomendasi latihan gratis.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button_description">Kembali</string>
    <string name="result_analysis">Hasil Analisis</string>
    <string name="result_name">Kettlebell</string>
    <string name="result_description">Kettlebell adalah alat latihan serbaguna yang memungkinkan Anda melakukan beragam gerakan kompleks yang menargetkan otot inti, otot lengan dan bahu, hingga otot kaki, kettlebell mampu membentuk tubuh Anda secara menyeluruh. Selain itu, latihan kettlebell juga sangat efektif dalam meningkatkan daya tahan, fleksibilitas, dan koordinasi tubuh, sehingga Anda tidak hanya akan lebih kuat, tetapi juga lebih lincah dan seimbang.</string>
    <string name="panduan_barbel">panduan menggunakan barbel</string>
    <string name="play_button_description">play</string>
    <string name="galeri">Galeri</string>
    <string name="kamera">Kamera</string>
    <string name="analisis">Analisis</string>
    <string name="title_welcome_page">Selamat datang di GymLens!</string>
    <string name="message_welcome_page">Mulailah perjalanan kebugaran Anda dengan GymLens dan buat setiap latihan lebih efektif dan menyenangkan.</string>
    <string name="signup">signup</string>
    <string name="signup_button">Daftar</string>
    <string name="title_sign_up">signup</string>
    <string name="title_login">signin</string>
    <string name="default_web_client_id">241705916714-n58metmhdt55onliq46lc20ersvht0mp.apps.googleusercontent.com</string>
    <string name="password">Kata Sandi</string>
    <string name="email">Email</string>
    <string name="full_name">Nama</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analisis</string>
    <string name="video_guide">Video Panduan Penggunaan Alat</string>
    <string name="title_run">Run Tracker</string>
    <string name="title_result">Analisis</string>
    <string name="halo">Halo</string>
    <string name="subtitle_home">Temukan Alat Gym dan Lacak Aktivitas Anda</string>
    <string name="article_title">Judul Artikel\n</string>
    <string name="artikel_title">Artikel</string>
    <string name="title_change_password">Ubah Password\n</string>
    <string name="old_password">Kata Sandi Lama</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="save">Simpan</string>
    <string name="profil">Profil</string>
    <string name="username">Nama Pengguna</string>
    <string name="user_email">Email Pengguna</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="logout">Logout</string>
    <string name="start_point">Start Point</string>
    <string name="start_running">Mulai</string>
    <string name="stop_running">Berhenti</string>
    <string name="title_article">Judul Artikel</string>
    <string name="desc">Deskripsi</string>
    <string name="password_new">Kata Sandi Baru</string>
    <string name="password_old">Kata Sandi Lama</string>
    <string name="distance_placeholder">Jarak: 0.0 meter</string>
    <string name="duration_placeholder">Durasi: 0 menit</string>
    <string name="user_image">user</string>
    <string name="bot_image">bot</string>
    <string name="email_hintt">"Masukan Email "</string>
    <string name="kirim">kirim</string>
    <string name="text_email">Email</string>
</resources>
