<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_beranda"
        android:icon="@drawable/homenofill"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_chatbot"
        android:icon="@drawable/historynofill"
        android:title="@string/title_chatbot" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/scanner"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_run"
        android:icon="@drawable/runnofill"
        android:title="@string/title_run" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profilenofill"
        android:title="@string/title_profile" />

</menu>
