<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_beranda">

    <!-- Beranda Fragment -->
    <fragment
        android:id="@+id/navigation_beranda"
        android:name="com.example.capstoneprojectmd.ui.beranda.BerandaFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_beranda" />

    <!-- Scan Fragment -->
    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.example.capstoneprojectmd.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <!-- Chatbot (Walk & Run) Fragment -->
    <fragment
        android:id="@+id/navigation_run"
        android:name="com.example.capstoneprojectmd.ui.chatbot.ChatFragment"
        android:label="@string/title_chatbot"
        tools:layout="@layout/fragment_chat" />

    <!-- Profile Fragment -->
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.capstoneprojectmd.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <!-- Walk & Run Fragment -->
    <fragment
        android:id="@+id/navigation_walk_run"
        android:name="com.example.capstoneprojectmd.ui.run.RunFragment"
        android:label="@string/title_run"
        tools:layout="@layout/fragment_run" />

</navigation>
