<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="16dp">

    <TextView
        android:id="@+id/oldLabel"
        android:layout_width="127dp"
        android:layout_height="39dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/old_password"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etOldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/rounded_button_background"
        android:hint="@string/password_old"
        android:fontFamily="@font/inter_medium"
        android:padding="12dp"
        android:textSize="14sp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/oldLabel" />

    <TextView
        android:id="@+id/newLabel"
        android:layout_width="157dp"
        android:layout_height="34dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/new_password"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etOldPassword" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/rounded_button_background"
        android:hint="@string/password_new"
        android:inputType="textPassword"
        android:fontFamily="@font/inter_medium"
        android:padding="12dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newLabel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSavePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        app:backgroundTint="@color/green"
        android:text="@string/save"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_semibold"
        android:padding="14dp"
        android:textSize="16sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNewPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>
