<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/autentifikasi">

    <TextView
        android:id="@+id/titleregisterText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/register_welcome_title"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/register_title"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleregisterText" />

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/register_subtitle"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <androidx.cardview.widget.CardView
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleText">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="650dp"
            android:padding="16dp">

            <!-- Tab Register/Login -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tabLayout"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bgregisterlogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtitleText">

                <!-- Tab Register -->
                <Button
                    android:id="@+id/registerTab"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/tab_selected_background"
                    android:text="@string/register"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/loginTab"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintWidth_percent="0.5" />

                <!-- Tab Login -->
                <Button
                    android:id="@+id/loginTab"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/tab_unselected_background"
                    android:text="@string/login"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/registerTab"
                    app:layout_constraintWidth_percent="0.5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Input Nama Lengkap -->
            <EditText
                android:id="@+id/fullNameInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="24dp"
                android:hint="@string/full_name_hint"
                android:padding="12dp"
                android:background="@drawable/rounded_button_background"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tabLayout" />

            <!-- Input Email -->
            <EditText
                android:id="@+id/emailInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button_background"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fullNameInput" />

            <!-- Input Kata Sandi -->
            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button_background"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailInput" />

            <!-- Lupa Kata Sandi -->
            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/forgot_password"
                android:textColor="@color/green"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordInput" />

            <!-- Tombol Login -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                app:backgroundTint="@color/green"
                android:text="@string/login_button"
                android:textColor="@color/white"
                android:padding="14dp"
                app:cornerRadius="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgotPassword" />

            <!-- Text OR -->
            <TextView
                android:id="@+id/orText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/green"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginButton" />

            <!-- Tombol Lanjutkan dengan Google -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/googleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                app:backgroundTint="@color/green"
                android:text="@string/google_login"
                android:textColor="@color/white"
                android:padding="14dp"
                app:cornerRadius="25dp"
                android:drawableStart="@drawable/google"
                android:drawablePadding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
